--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "note taker app",
     "main": "server.js",
     "scripts": {
-        "start": "node ./Develop/server.js"
+        "start": "node server.js"
     },
     "repository": {
         "type": "git",
